--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,6 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
-
-<!-- Mirrored from themes.pixelstrap.net/mega_bot/html/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Mar 2024 20:04:21 GMT -->
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,8 +8,8 @@
     <meta name="description" content="megabot">
     <meta name="keywords" content="megabot">
     <meta name="author" content="megabot">
-    <link rel="icon" href="../assets/images/favicon.png" type="image/x-icon" />
-    <link rel="shortcut icon" href="../assets/images/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="{% static 'assets/images/favicon.png '%}" type="image/x-icon" />
+    <link rel="shortcut icon" href="{% static 'assets/images/favicon.png'%}" type="image/x-icon" />
     <title>Megabot</title>
 
     <!--Google font-->
@@ -20,22 +18,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700;900&amp;display=swap" rel="stylesheet">
 
     <!-- bootstrap css -->
-    <link id="rtl-link" rel="stylesheet" type="text/css" href="../assets/css/vendors/bootstrap.css">
+    <link id="rtl-link" rel="stylesheet" type="text/css" href="{% static 'assets/css/vendors/bootstrap.css'%}">
 
     <!-- remixicon css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/remixicon.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/vendors/remixicon.css'%}">
 
     <!-- iconsax css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/iconsax.css" />
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/vendors/iconsax.css'%}" />
 
     <!-- animation css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/aos.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/vendors/aos.css'%}">
 
     <!-- swiper slider css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/swiper-bundle.min.css" />
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/vendors/swiper-bundle.min.css'%}" />
 
     <!-- style css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css'%}">
 
 
 
@@ -133,13 +131,13 @@
                 <div class="col-12">
                     <div class="home-content">
                         <div class="bg-effect">
-                            <img src="../assets/images/home/home-bg.gif" class="img-fluid bg-gif" alt="">
-                            <img src="../assets/svg/home/1.png" class="img-fluid effect1 rotate-effect" alt="">
+                            <img src="{% static 'assets/images/home/home-bg.gif'%}" class="img-fluid bg-gif" alt="">
+                            <img src="{% static 'assets/svg/home/1.png'%}" class="img-fluid effect1 rotate-effect" alt="">
                             <img src="https://themes.pixelstrap.net/mega_bot/assets/svg/home/2.svg" class="img-fluid effect2 rotate-effect" alt="">
                         </div>
                         <div>
                             <h1>USE MEGABOT TO <div class="title-effect">
-                                    <img src="../assets/images/title-effect.png" alt=""><span>SIMPLIFY</span>
+                                    <img src="{% static 'assets/images/title-effect.png'%}" alt=""><span>SIMPLIFY</span>
                                 </div> YOUR LIFE</h1>
                             <p>
                                 Megabot is a robust AI tool that uses artificial intelligence algorithms to generate
@@ -156,12 +154,12 @@
                     <div class="home-laptop px-md-0 px-3">
                         <div class="laptop-sec position-relative">
                             <div class="hand-sec">
-                                <img src="../assets/images/home/hand.png" class="img-fluid left-hand" alt="hand">
-                                <img src="../assets/images/home/hand.png" class="img-fluid right-hand" alt="hand">
-                                <img src="../assets/images/home/finger.png" class="img-fluid left-finger" alt="hand">
-                                <img src="../assets/images/home/finger.png" class="img-fluid right-finger" alt="hand">
+                                <img src="{% static 'assets/images/home/hand.png'%}" class="img-fluid left-hand" alt="hand">
+                                <img src="{% static 'assets/images/home/hand.png'%}" class="img-fluid right-hand" alt="hand">
+                                <img src="{% static 'assets/images/home/finger.png'%}" class="img-fluid left-finger" alt="hand">
+                                <img src="{% static 'assets/images/home/finger.png'%}" class="img-fluid right-finger" alt="hand">
                             </div>
-                            <img src="../assets/images/home/laptop.png" class="img-fluid laptop-img" alt="laptop">
+                            <img src="{% static 'assets/images/home/laptop.png'%}" class="img-fluid laptop-img" alt="laptop">
                         </div>
                         <div class="home-info">
                             <ul class="info-list">
@@ -393,9 +391,9 @@
     <!-- feature section start -->
     <section class="feature-section section-b-space">
         <div class="bg-effect">
-            <img src="../assets/images/feature.gif" class="img-fluid feature-left" alt="">
-            <img src="../assets/images/feature.gif" class="img-fluid feature-right" alt="">
-            <img src="../assets/images/feature-bg.png" class="img-fluid feature-bg" alt="">
+            <img src="{% static 'assets/images/feature.gif'%}" class="img-fluid feature-left" alt="">
+            <img src="{% static 'assets/images/feature.gif'%}" class="img-fluid feature-right" alt="">
+            <img src="{% static 'assets/images/feature-bg.png'%}" class="img-fluid feature-bg" alt="">
             <span class="round-effect"></span>
         </div>
         <div class="container">
@@ -1041,7 +1039,7 @@
                             <div class="small-circle"><span></span></div>
                             <div class="large-circle"><span></span></div>
                             <div class="avtar-img">
-                                <img src="../assets/images/user/1.jpg" class="img-fluid" alt="user">
+                                <img src="{% static 'assets/images/user/1.jpg'%}" class="img-fluid" alt="user">
                             </div>
                             <h4>Marvin McKinney</h4>
                             <h5>Content writer</h5>
@@ -1062,7 +1060,7 @@
                             <div class="small-circle"><span></span></div>
                             <div class="large-circle"><span></span></div>
                             <div class="avtar-img">
-                                <img src="../assets/images/user/2.jpg" class="img-fluid" alt="user">
+                                <img src="{% static 'assets/images/user/2.jpg'%}" class="img-fluid" alt="user">
                             </div>
                             <h4>Marvin McKinney</h4>
                             <h5>Content writer</h5>
@@ -1082,7 +1080,7 @@
                             <div class="small-circle"><span></span></div>
                             <div class="large-circle"><span></span></div>
                             <div class="avtar-img">
-                                <img src="../assets/images/user/3.jpg" class="img-fluid" alt="user">
+                                <img src="{% static 'assets/images/user/3.jpg'%}" class="img-fluid" alt="user">
                             </div>
                             <h4>Marvin McKinney</h4>
                             <h5>Content writer</h5>
@@ -1102,7 +1100,7 @@
                             <div class="small-circle"><span></span></div>
                             <div class="large-circle"><span></span></div>
                             <div class="avtar-img">
-                                <img src="../assets/images/user/3.jpg" class="img-fluid" alt="user">
+                                <img src="{% static 'assets/images/user/3.jpg'%}" class="img-fluid" alt="user">
                             </div>
                             <h4>Marvin McKinney</h4>
                             <h5>Content writer</h5>
@@ -1347,36 +1345,33 @@
 
 
     <!-- Bootstrap js-->
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'assets/js/bootstrap.bundle.min.js'%}"></script>
 
     <!-- slider js-->
-    <script src="../assets/js/swiper-bundle.min.js"></script>
-    <script src="../assets/js/custom-slider.js"></script>
+    <script src="{% static 'assets/js/swiper-bundle.min.js'%}"></script>
+    <script src="{% static 'assets/js/custom-slider.js'%}"></script>
 
     <!-- custom cursor -->
-    <script src="../assets/js/custom-cursor.js"></script>
+    <script src="{% static 'assets/js/custom-cursor.js'%}"></script>
 
     <!-- aos animation -->
-    <script src="../assets/js/aos.js"></script>
-    <script src="../assets/js/custom-aos.js"></script>
+    <script src="{% static 'assets/js/aos.js'%}"></script>
+    <script src="{% static 'assets/js/custom-aos.js'%}"></script>
 
     <!-- iconsax js -->
-    <script src="../assets/js/iconsax.js"></script>
+    <script src="{% static 'assets/js/iconsax.js'%}"></script>
 
     <!-- laptop animation js -->
-    <script src="../assets/js/home-animation.js"></script>
+    <script src="{% static 'assets/js/home-animation.js'%}"></script>
 
     <!-- header sticky js -->
-    <script src="../assets/js/header_sticky.js"></script>
+    <script src="{% static 'assets/js/header_sticky.js'%}"></script>
 
     <!-- pricing js -->
-    <script src="../assets/js/pricing-table.js"></script>
+    <script src="{% static 'assets/js/pricing-table.js'%}"></script>
 
     <!-- Theme js-->
-    <script src="../assets/js/script.js"></script>
+    <script src="{% static 'assets/js/script.js'%}"></script>
 
 </body>
-
-
-<!-- Mirrored from themes.pixelstrap.net/mega_bot/html/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Mar 2024 20:04:33 GMT -->
 </html>
