--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -31,6 +31,65 @@
 /* 4.4 Error CSS */
 /* 4.5 Home CSS */
 /* 4.6 Login CSS*/
+
+
+/* === removing default button style ===*/
+.butto {
+  margin: 0;
+  height: auto;
+  background: transparent;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+}
+
+/* button styling */
+.butto {
+  --border-right: 6px;
+  --text-stroke-color: rgba(255,255,255,0.6);
+  --animation-color: #37FF8B;
+  --fs-size: 2em;
+  letter-spacing: 3px;
+  text-decoration: none;
+  font-size: var(--fs-size);
+  font-family: "Arial";
+  position: relative;
+  text-transform: uppercase;
+  color: transparent;
+  -webkit-text-stroke: 1px var(--text-stroke-color);
+}
+/* this is the text, when you hover on button */
+.hover-text {
+  position: absolute;
+  box-sizing: border-box;
+  content: attr(data-text);
+  color: var(--animation-color);
+  width: 0%;
+  inset: 0;
+  border-right: var(--border-right) solid var(--animation-color);
+  overflow: hidden;
+  transition: 0.5s;
+  -webkit-text-stroke: 1px var(--animation-color);
+}
+/* hover */
+.butto:hover .hover-text {
+  width: 100%;
+  filter: drop-shadow(0 0 23px var(--animation-color))
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*=====================
    1.0 Variables start
 ==========================*/
@@ -167,7 +226,7 @@ body:after {
   background-size: cover;
 }
 body.inner-bg:after {
-  background-image: url(../images/inner-bg.png);
+  background-image: url('{% static "assets/inner-bg.png" %}');
 }
 
 h1 {
