--- a/templates/login.html
+++ b/templates/login.html
@@ -1,45 +1,40 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
-
-<!-- Mirrored from themes.pixelstrap.net/mega_bot/html/login.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Mar 2024 20:04:36 GMT -->
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="megabot">
-    <meta name="keywords" content="megabot">
-    <meta name="author" content="megabot">
-    <link rel="icon" href="../assets/images/favicon.png" type="image/x-icon" />
-    <link rel="shortcut icon" href="../assets/images/favicon.png" type="image/x-icon" />
-    <title>Megabot</title>
-
-    <!--Google font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com/">
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700;900&amp;display=swap" rel="stylesheet">
-
-    <!-- bootstrap css -->
-    <link id="rtl-link" rel="stylesheet" type="text/css" href="../assets/css/vendors/bootstrap.css">
-
-    <!-- remixicon css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/remixicon.css">
-
-    <!-- iconsax css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/iconsax.css" />
-
-    <!-- animation css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/aos.css">
-
-    <!-- swiper slider css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/swiper-bundle.min.css" />
-
-    <!-- style css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-
-
-
-</head>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="megabot">
+        <meta name="keywords" content="megabot">
+        <meta name="author" content="megabot">
+        <link rel="icon" href="{% static 'assets/images/favicon.png '%}" type="image/x-icon" />
+        <link rel="shortcut icon" href="{% static 'assets/images/favicon.png'%}" type="image/x-icon" />
+        <title>Login / Signup</title>
+    
+        <!--Google font-->
+        <link rel="preconnect" href="https://fonts.googleapis.com/">
+        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700;900&amp;display=swap" rel="stylesheet">
+    
+        <!-- bootstrap css -->
+        <link id="rtl-link" rel="stylesheet" type="text/css" href="{% static 'assets/css/vendors/bootstrap.css'%}">
+    
+        <!-- remixicon css -->
+        <link rel="stylesheet" type="text/css" href="{% static 'assets/css/vendors/remixicon.css'%}">
+    
+        <!-- iconsax css -->
+        <link rel="stylesheet" type="text/css" href="{% static 'assets/css/vendors/iconsax.css'%}" />
+    
+        <!-- animation css -->
+        <link rel="stylesheet" type="text/css" href="{% static 'assets/css/vendors/aos.css'%}">
+    
+        <!-- swiper slider css -->
+        <link rel="stylesheet" type="text/css" href="{% static 'assets/css/vendors/swiper-bundle.min.css'%}" />
+    
+        <!-- style css -->
+        <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css'%}">
+    </head>
 
 <body>
 
@@ -114,6 +109,8 @@
                             </div>
                             <div class="tab-pane fade" id="signup-tab-pane" role="tabpanel" aria-labelledby="signup-tab"
                                 tabindex="0">
+
+                                
                                 <form class="auth-form">
                                     <div class="mb-3 form-group">
                                         <i class="iconsax" data-icon="user-1"></i>
@@ -145,6 +142,12 @@
                                             in</a>
                                     </h4>
                                 </form>
+
+
+
+
+
+
                             </div>
                         </div>
                     </div>
@@ -162,28 +165,33 @@
 
 
     <!-- Bootstrap js-->
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'assets/js/bootstrap.bundle.min.js'%}"></script>
 
     <!-- slider js-->
-    <script src="../assets/js/swiper-bundle.min.js"></script>
-    <script src="../assets/js/custom-slider.js"></script>
+    <script src="{% static 'assets/js/swiper-bundle.min.js'%}"></script>
+    <script src="{% static 'assets/js/custom-slider.js'%}"></script>
 
     <!-- custom cursor -->
-    <script src="../assets/js/custom-cursor.js"></script>
+    <script src="{% static 'assets/js/custom-cursor.js'%}"></script>
 
     <!-- aos animation -->
-    <script src="../assets/js/aos.js"></script>
-    <script src="../assets/js/custom-aos.js"></script>
+    <script src="{% static 'assets/js/aos.js'%}"></script>
+    <script src="{% static 'assets/js/custom-aos.js'%}"></script>
 
     <!-- iconsax js -->
-    <script src="../assets/js/iconsax.js"></script>
+    <script src="{% static 'assets/js/iconsax.js'%}"></script>
 
-    <!-- tab js-->
-    <script src="../assets/js/tab.js"></script>
+    <!-- laptop animation js -->
+    <script src="{% static 'assets/js/home-animation.js'%}"></script>
+
+    <!-- header sticky js -->
+    <script src="{% static 'assets/js/header_sticky.js'%}"></script>
+
+    <!-- pricing js -->
+    <script src="{% static 'assets/js/pricing-table.js'%}"></script>
 
     <!-- Theme js-->
-    <script src="../assets/js/script.js"></script>
-
+    <script src="{% static 'assets/js/script.js'%}"></script>
 </body>
 
 
