--- a/templates/chat.html
+++ b/templates/chat.html
@@ -163,22 +163,38 @@
 
 
 
-                        {% comment %} data-bs-toggle="collapse" data-bs-target="#navbarNav" {% endcomment %}
+                        {% comment %}aria-controls="navbarNav" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation" {% endcomment %}
                         
+
+
+
+
+
+
+
                         <form class="msger-inputarea" method="post" action="{% url 'chat' %}">
                             {% csrf_token %}
-                            <button class="navbar-toggler d-lg-none d-block msger-send-btn" type="button"
-                                aria-controls="navbarNav"aria-expanded="false" aria-label="Toggle navigation">
+                            <button class="navbar-toggler d-lg-none d-block msger-send-btn" type="button">
                                 <i class="iconsax" data-icon="text-align-justify"></i>
                             </button>
-
 
                             <input type="text" class="msger-input" placeholder="Ask any question here..." />
                             <a href="#" class="scan-icon"><i class="iconsax" data-icon="scan-1"></i></a>
                             <a href="#" class="mic-icon"><i class="iconsax" data-icon="mic-1"></i></a>
-                            <button type="submit" class="msger-send-btn"><i class="iconsax"
-                                    data-icon="send-1"></i></button>
+                            <button type="submit" class="msger-send-btn"><i class="iconsax"data-icon="send-1"></i></button>
                         </form>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -846,7 +862,4 @@
     <script src="{% static 'assets/js/script.js'%}"></script>
 
 </body>
-
-
-<!-- Mirrored from themes.pixelstrap.net/mega_bot/html/chat.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Mar 2024 20:04:36 GMT -->
 </html>
