--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
                 </div>
             </div>
         </nav>
-        <a data-cursor="pointer" href="{% url 'login' %}" class="btn btn-theme d-sm-inline-block d-none"><span>Login
+        <a data-cursor="pointer" href="{% url 'signup_login' %}" class="btn btn-theme d-sm-inline-block d-none"><span>Login
                 Now</span></a>
     </header>
     <!-- header end -->
